Bug 450053 - Chromium(on ozone wayland) opens in maximized state and size, but does not show restore icon when using system borders
Summary: Chromium(on ozone wayland) opens in maximized state and size, but does not sh...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.24.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-11 23:39 UTC by Samuel Reddy
Modified: 2024-05-16 22:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.1
Sentry Crash Report:


Attachments
Video of this issue (3.08 MB, video/mp4)
2022-02-11 23:42 UTC, Samuel Reddy
Details
This is the correct attachment (3.19 MB, video/mp4)
2022-02-11 23:47 UTC, Samuel Reddy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Reddy 2022-02-11 23:39:58 UTC
SUMMARY:
When using Chromium(on ozone wayland) with system borders, if chromium is closed maximized, then chromium is reopened, it opens in a maximized state and size, but does not show restore icon. If you click the maximize icon, it restores the window.


STEPS TO REPRODUCE
1. enable system borders in chromium
2. make chromium maximized
3. close chromium
4. reopen chromium
5. chromium in maximized state and size but kwin does not show restore icon

OBSERVED RESULT:
Chromium shows maximized icon, but when you click it, it restores the window.

EXPECTED RESULT:
Chromium should show the restore icon instead of the maximize icon.

SOFTWARE/OS VERSIONS:
Operating System: Arch Linux
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Kernel Version: 5.16.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × AMD Ryzen 5 3450U with Radeon Vega Mobile Gfx
Memory: 5.7 GiB of RAM
Graphics Processor: AMD Radeon Vega 8 Graphics

ADDITIONAL INFORMATION:
I attached a video of the problem
Comment 1 Samuel Reddy 2022-02-11 23:42:24 UTC
Created attachment 146609 [details]
Video of this issue
Comment 2 Samuel Reddy 2022-02-11 23:47:31 UTC
Created attachment 146610 [details]
This is the correct attachment

The original one was the wrong one.
Comment 3 Behzad A 2022-02-12 20:09:59 UTC
Can't reproduce with git-master and Chrome-Dev Ver 100.X
Comment 4 Behzad A 2022-02-12 20:16:37 UTC
OK, this issue occurs only with chrome stable, then is issue is related to chromium
Comment 5 Vlad Zahorodnii 2022-02-14 10:05:13 UTC
It's a kwin bug.
Comment 6 Bug Janitor Service 2022-02-14 10:08:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2010
Comment 7 Vlad Zahorodnii 2022-02-14 10:18:05 UTC
On a bit unrelated note: chromium still seems not to work as expected when restoring from maximize mode. chromium needs to ack the configure event and repaint its windows, but it appears like it still doesn't do that sometimes. it's worth checking if this issue is already reported.
Comment 8 Vlad Zahorodnii 2022-02-14 13:56:51 UTC
Git commit c76855520cf35f1d927d829b2528a5a7eb0091ab by Vlad Zahorodnii.
Committed on 14/02/2022 at 13:41.
Pushed by vladz into branch 'master'.

wayland: Fix maximize mode propagation to decoration

If the window is initially maximized, there won't be any current
decoration when XdgToplevelClient changes the maximize mode, we need to
use m_nextDecoration.

M  +2    -2    src/xdgshellclient.cpp

https://invent.kde.org/plasma/kwin/commit/c76855520cf35f1d927d829b2528a5a7eb0091ab
Comment 9 Vlad Zahorodnii 2022-02-14 13:59:47 UTC
Git commit a43496bcc4795cbe462cd72198e62b0a8923f589 by Vlad Zahorodnii.
Committed on 14/02/2022 at 13:59.
Pushed by vladz into branch 'Plasma/5.24'.

wayland: Fix maximize mode propagation to decoration

If the window is initially maximized, there won't be any current
decoration when XdgToplevelClient changes the maximize mode, we need to
use m_nextDecoration.


(cherry picked from commit c76855520cf35f1d927d829b2528a5a7eb0091ab)

M  +2    -2    src/xdgshellclient.cpp

https://invent.kde.org/plasma/kwin/commit/a43496bcc4795cbe462cd72198e62b0a8923f589